# shtoolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
joblib_cached/joblib/shtoolkit/shtrans/legendre/fnALFs_cache/: func_code.py
joblib_cached/joblib/shtoolkit/shtrans/legendre/fnALFs_cache/d674444b660e3f035c581ef20fdd1c82/: metadata.json
shtoolkit/: shcoeff.py  shfilter.py  shgrid.py  shload.py  shspecial.py  shtime.py  shtrans.py  shtype.py  shunit.py
shtoolkit/test/: test_shunit.py  test_sle.py  text_sphcoeff.py
src/shtoolkit/: __init__.py  shcoeff.py  shfilter.py  shgrid.py  shload.py  shrequest.py  shspecial.py  shtime.py  shtype.py  shunit.py
src/shtoolkit/shcoeffs/: __init__.py  _harmonic.py  deg2coeff.py  harmonic.py  lowdeg.py  replacecoeff.py  spharmcoeff.py
src/shtoolkit/shread/: __init__.py  read_eam.py  read_gia.py  read_icgem.py  read_lln.py  read_slr_5x5.py  read_technical_note.py
src/shtoolkit/shspecial/: grace_obp.py  leakage.py  sea_level_equation.py
src/shtoolkit/shtime/: __init__.py  ssa_fill.py  tsanalysis.py  tsgenerator.py  uncertainty.py  variance_component_estimate.py  wavelet_decompose.py
src/shtoolkit/shtrans/: __init__.py  _cilm2grid.pyx  _grid2cilm.pyx  cilm2grid.pyx  grid2cilm.pyx  legendre.pxd  legendre.pyi  legendre.pyx  shfunc.pxd  shfunc.pyi  shfunc.pyx  spharm.pyi  spharm.pyx  transform.py
test/: test_cilm2grid.py  test_fft.py  test_fitting.py  test_graceobp.py  test_graceobp_diff_slr_c20_c30.py  test_graceobp_slr.py  test_gracetime.py  test_grid2cilm.py  test_legendre.py  test_read.py  test_shgrid.py  test_shunit.py  test_sle.py  test_sphcoeff.py
