[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "shtoolkit"
authors = [{name = "wjh", email = "joycug@163.com"}]
version = "1.0"
description = "A Python/Cython package for excuting spherical harmonic analysis/synthesis and processing GRACE/SLR gravatitional spherical harmonic coefficients."
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "numba",
    "tqdm",
    "pyfftw",
    "PyWavelets",
]
requires-python = ">=3.11"

[project.optional-dependencies]
cartopy = ["cartopy"]
pyshtools = ["pyshtools"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint = {select = ["E", "F", "B", "I"], ignore = ["E741", "B006"]}
format = {quote-style = "double"}
